* Adds buckaroo-pm/host-core-foundation dep

--- a/.buckconfig
+++ b/.buckconfig
@@ -1,2 +1,5 @@
 [project]
   ignore = .git
+
+[repositories]
+  buckaroo.github.buckaroo-pm.host-core-foundation = ./buckaroo-packages/github/buckaroo-pm/host-core-foundation
